# Project_MIRA

./: LICENSE  README.md
Mira_program/: README.md
Mira_program/src/mira_btree/: CMakeLists.txt  package.xml
Mira_program/src/mira_btree/launch/: btree.launch  disarm.launch  rov.launch  runController.launch  runDocking.launch  runEmergencyDependency.launch  runImagePipeline.launch  runPyMavlink.launch
Mira_program/src/mira_btree/src/: btree.cpp  disarm.cpp  rov.cpp  runController.cpp  runDocking.cpp  runImagePipeline.cpp  runPyMavlink.cpp
Mira_program/src/mira_perception/scripts/: image_and_depth_translator.py
